Fix zoom slider CSS (it was overlapping the zoom extents button)

--- a/static/preview.css
+++ b/static/preview.css
@@ -25,3 +25,7 @@ div.ol-popup {
     background: #FFFFFF;
     color: #000000;
 }
+
+.ol-zoomslider {
+    top: 110px;
+}
